# DDD-fastapi-auth

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  pyproject.toml
app/application/api/: exceptions.py  lifespan.py  main.py
app/application/api/dependecies.py/: base.py
app/application/api/groups/: filters.py  routers.py  schemas.py
app/application/api/users/: filters.py  handlers.py  routers.py  schemas.py
app/domain/entities/: base.py  groups.py  users.py
app/domain/events/: base.py  groups.py  users.py
app/domain/exceptions/: base.py  groups.py  users.py
app/domain/values/: base.py  groups.py  users.py
app/infrastructure/cache/: base.py  redis.py
app/infrastructure/exceptions/: base.py  cookies.py
app/infrastructure/message_brokers/: base.py  dummy_kafka.py  kafka.py
app/infrastructure/repositories/: base.py  users.py
app/infrastructure/repositories/common/: base_repository.py
app/infrastructure/repositories/groups/: base.py  converters.py  memory_repository.py  mongo.py
app/infrastructure/repositories/groups/filters/: groups.py
app/infrastructure/repositories/users/: base.py  converters.py  fake_repository.py  memory_repository.py  mongo.py
app/infrastructure/repositories/users/filters/: users.py
app/infrastructure/security/cookies/: base.py  jwt.py  pyjwt.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  users.py
app/logic/events/: base.py  users.py
app/logic/exceptions/: base.py  groups.py  mediator.py  users.py
app/logic/mediator/: base.py
app/logic/queries/: groups.py  users.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: test_create_user_group.py
app/tests/domain/values/: test_groups.py  test_users.py
app/tests/logic/: test_users.py
docker-compose/: app.yaml  storages.yaml
docker_compose/: app.yaml  kafka.yaml  redis.yaml  storages.yaml
