[tool.poetry]
name = "ddd-fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Alexey Volkov <vollkovalex1991@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pre-commit = "^3.7.0"
uvicorn = {extras = ["all"], version = "^0.29.0"}
ipython = "^8.24.0"
motor = {extras = ["all"], version = "^3.4.0"}
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
faker = "^25.2.0"
punq = "^0.7.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
