[tool.poetry]
name = "ddd-fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Alexey Volkov <vollkovalex1991@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
uvicorn = {extras = ["all"], version = "^0.29.0"}
ipython = "^8.24.0"
motor = {extras = ["all"], version = "^3.4.0"}
punq = "^0.7.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
aiokafka = "^0.10.0"
aiosmtplib = "^3.0.1"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
redis = "^5.0.4"
fastapi-cache2 = "^0.2.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.4.6"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
faker = "^25.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
